--- a/index.html
+++ b/index.html
@@ -96,20 +96,9 @@
     </div>
 
     <div>
-        向所有亚马逊网站添加价格历史图表和价格下降警报选项。<br>
-        向所有亚马逊网站添加价格历史图表和排名趋势。<br>
-        - 原汁原味，同步更新，数据及时。<br>
-        - 价格优惠， 冰点价<br>
-        - 售后客服，有疑问随时联系客服<br>
-        - 支持紫鸟浏览器，率先支持<br>
-        - 支持看销售数据 （全网独家<br>
-        - 上新监控<br>
-        > 为什么选择我们<br>
-        1. 超低价格 - 平均一个设备一个月不到一包烟钱。<br>
-        2. 官网的唯一售后方式是 邮箱联系， 我们有微信客服，随时有疑问随时联系我们。<br>
-        3. 增加了销量曲线，也支持看销量了 （年付版本 <br>
-        > 支持站点<br>
-        支持亚马逊 [ .com | .co.uk | .de | .co.jp | .fr | .ca | .it | .es | .in | .com.mx ]  后缀站点。<br>
+        <p>向所有亚马逊网站添加价格历史图表和价格下降警报选项。</p>
+        <p>向所有亚马逊网站添加价格历史图表和排名趋势。</p>
+        <p>支持亚马逊 [ .com | .co.uk | .de | .co.jp | .fr | .ca | .it | .es | .in | .com.mx ]  后缀站点。</p>
     </div>
 
 </div>
